[package]
name = "rocket_server"
version = "0.1.0"
authors = ["osama530 <osamaqamar93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
#rocket_cors = { version = "0.5.1", default-features = false }
rand = "0.7.3"
serde_json = "0.9.10"